k8s/sd-search-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sd-search-ui
  namespace: sd-search
  labels:
    app: sd-search-ui
spec:
  ports:
    - name: http
      port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    app: sd-search-ui
