k8s/sd-search-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - host: sd-search-ui.apps.example.com
    http:
      paths:
      - backend:
          service:
            name: sd-search-ui
            port:
              number: 8081
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - sd-search-ui.apps.example.com
    secretName: custom-tls-certs
status: {}
